support axis text properties during OOXML export, tdf#90532

Change-Id: Ied2b21154e31754f8b8461c349fe0e52ce7455e8