oox/source/export/chartexport.cxx
@@ -2306,6 +2306,25 @@ void ChartExport::exportShapeProps( Reference< XPropertySet > xPropSet )
     pFS->endElement( FSNS( XML_c, XML_spPr ) );
 }
 
+void ChartExport::exportTextProps(Reference<XPropertySet> xPropSet)
+{
+    FSHelperPtr pFS = GetFS();
+    pFS->startElement(FSNS(XML_c, XML_txPr), FSEND);
+
+    pFS->startElement(FSNS(XML_c, XML_bodyPr), FSEND);
+    pFS->endElement(FSNS(XML_c, XML_bodyPr));
+
+    pFS->startElement(FSNS(XML_a, XML_p), FSEND);
+    pFS->startElement(FSNS(XML_a, XML_pPr), FSEND);
+
+    WriteRunProperties(xPropSet, false, XML_defRPr);
+
+    pFS->endElement(FSNS(XML_a, XML_pPr));
+    pFS->endElement(FSNS(XML_a, XML_p));
+
+    pFS->endElement(FSNS(XML_c, XML_txPr));
+}
+
 void ChartExport::InitPlotArea( )
 {
     Reference< XPropertySet > xDiagramProperties (mxDiagram, uno::UNO_QUERY);
@@ -2679,6 +2698,8 @@ void ChartExport::_exportAxis(
 
     // shape properties
     exportShapeProps( xAxisProp );
+
+    exportTextProps(xAxisProp);
 
     pFS->singleElement( FSNS( XML_c, XML_crossAx ),
             XML_val, I32S( rAxisIdPair.nCrossAx ),
